feat: simple project pagination with docs
