# model/project/schema.js
@@ -1,11 +1,41 @@
 const mongoose = require('mongoose');
+const mongoosePaginate = require('mongoose-paginate')
 const Schema = mongoose.Schema;
 
-
 const projectSchema = new Schema({
-  title: { type: String, required: true },
-  body: { type: String }
+  name: {
+    type: String,
+    required: true
+  },
+  completedEstimated: {
+    type: Number,
+    min: 0,
+    max: 100
+  },
+  status: {
+    type: String,
+    required: true,
+    enum: ['ACTIVED', 'PAUSED', 'FINISHED']
+  },
+  budget: {
+    ownAmount: {
+      type: Number
+    },
+    hours: {
+      type: Number
+    },
+    billingDate: {
+      type: Date
+    },
+    startDate: {
+      type: Date
+    },
+    endDate: {
+      type: Date
+    }
+  }
 });
 
+projectSchema.plugin(mongoosePaginate)
 
 module.exports = mongoose.model('Project', projectSchema);
